# Direc-Tree

./: README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  ldap_conn.rs  lib.rs
src-tauri/src/commands/: connect_ldap.rs  disconnect_ldap.rs  fetch_attribute_value.rs  fetch_ldap_entry_attrs.rs  fetch_ldap_tree.rs  fetch_schema.rs  get_all_ldap_objects.rs  log_commands.rs  mod.rs  modify_entry.rs  profile_management.rs  search_ldap.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: ldap_node.rs  ldap_profile.rs  mod.rs
src-tauri/src/state_management/: app_state.rs
src/app/: globals.css  layout.tsx  page.tsx  utils.ts
src/app/components/: AttributePanel.tsx  Base64ImageDisplay.tsx  BookmarksPanel.tsx  CommandPalette.tsx  CompareEntriesModal.tsx  ConfirmDialog.tsx  ConnectionFormModal.tsx  ConnectionTree.tsx  ContentPreview.tsx  DnBreadcrumb.tsx  EditAttributeModal.tsx  FileExplorer.tsx  FolderNameDialog.tsx  LdapTreeView.tsx  LdifView.tsx  ProfileFormModal.tsx  ProfileList.tsx  RootDseModal.tsx  XmlContentViewer.tsx
src/app/hooks/: useLdapTree.ts
src/app/logs/: page.tsx
src/app/models/: AttributeTypeEnum.ts  ConnectionTree.ts  LdapNode.ts  LdapProfile.ts  SchemaTypes.ts  SearchModels.ts
src/app/schema/: SchemaPageClient.tsx  page.tsx
src/app/search/: page.tsx
src/app/tree/: page.tsx
src/app/utils/: loggedInvoke.ts  logger.ts
src/app/ux/: CustomResizeHandle.tsx
